--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -47,7 +47,7 @@
     </div>
     <div class="row justify-content-center">
         <div class="register-container">
-            <form action="#" th:action="@{/register}" th:object="${team}" method="post">
+            <form action="#" th:action="@{/register}" th:object="${form}" method="post">
                 <div class="form-group">
                     <label for="name">Team</label>
                     <input type="text" class="form-control" id="name" th:field="*{name}" placeholder="">
@@ -71,8 +71,8 @@
                     <input type="password" class="form-control" id="password" th:field="*{password}" placeholder="">
                 </div>
                 <div class="form-group">
-                    <label for="rpassword">Confirm Password</label>
-                    <input type="password" class="form-control" id="rpassword" th:field="*{cpassword}" placeholder="">
+                    <label for="passwordCheck">Confirm Password</label>
+                    <input type="password" class="form-control" id="passwordCheck" th:field="*{passwordCheck}" placeholder="">
                 </div>
                 <div class="d-flex flex-row-reverse">
                     <button type="submit" id="login" class="btn btn-primary ml-2">Register</button>
