MOJ-3: added start of team submission viewing on feedback screen, added method @rolesallowed security

--- a/src/main/resources/static/css/testfeedback.css
+++ b/src/main/resources/static/css/testfeedback.css
@@ -30,3 +30,9 @@ svg {
     stroke-dashoffset: 440;
     transition: all 1s linear;
 }
+
+@media (min-width: 992px) {
+    .modal-xl {
+        max-width: 80%;
+    }
+}
