--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -12,12 +12,13 @@
     <link rel="stylesheet" th:href="@{/webjars/bootstrap/css/bootstrap.min.css}"/>
     <link rel="stylesheet" th:href="@{/css/index.css}"/>
 
-    <link rel="apple-touch-icon" sizes="180x180" th:href="@{/images/apple-touch-icon.png}" href="/static/images/apple-touch-icon.png" />
-    <link rel="icon" type="image/png" sizes="32x32" th:href="@{/images/favicon-32x32.png}" href="/static/images/favicon-32x32.png" />
-    <link rel="icon" type="image/png" sizes="16x16" th:href="@{/images/favicon-16x16.png}" href="/static/images/favicon-16x16.png" />
-    <link rel="mask-icon" th:href="@{/images/safari-pinned-tab.svg}" href="/static/imags/safari-pinned-tab.svg" color="#5bbad5" />
-    <link rel="manifest" th:href="@{//manifest.json}" href="/static/manifest.json" />
-    <meta name="theme-color" content="#ffffff" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/static/images/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/static/images/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/static/images/favicon-16x16.png">
+    <link rel="manifest" href="/static/manifest.json">
+    <link rel="mask-icon" href="/static/images/safari-pinned-tab.svg" color="#5bbad5">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="theme-color" content="#ffffff">
 
 </head>
 
