--- a/src/main/resources/templates/testfeedback.html
+++ b/src/main/resources/templates/testfeedback.html
@@ -4,6 +4,8 @@
     <title>Masters of Java 2018 Live Feedback</title>
     <link rel="stylesheet" th:href="@{/webjars/font-awesome/css/solid.min.css}"/>
     <link rel="stylesheet" th:href="@{/webjars/font-awesome/css/fontawesome.min.css}"/>
+    <link rel="stylesheet" th:href="@{/webjars/codemirror/addon/hint/show-hint.css}"/>
+    <link rel="stylesheet" th:href="@{/webjars/codemirror/lib/codemirror.css}"/>
     <link rel="stylesheet" th:href="@{/webjars/bootstrap/css/bootstrap.min.css}"/>
     <link th:href="@{/css/testfeedback.css}" href="/static/css/testfeedback.css" rel="stylesheet"/>
 
@@ -141,9 +143,16 @@
 </div>
 
 <script type="text/javascript" th:src="@{/webjars/jquery/jquery.min.js}"></script>
+<script type="text/javascript" th:src="@{/webjars/jquery-ui/jquery-ui.min.js}"></script>
 <script type="text/javascript" th:src="@{/webjars/popper.js/umd/popper.min.js}"></script>
 <script type="text/javascript" th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>
 <script type="text/javascript" th:src="@{/webjars/stomp-websocket/stomp.min.js}"></script>
+<script type="text/javascript" th:src="@{/webjars/codemirror/lib/codemirror.js}"></script>
+<script type="text/javascript" th:src="@{/webjars/codemirror/addon/edit/matchbrackets.js}"></script>
+<script type="text/javascript" th:src="@{/webjars/codemirror/addon/selection/active-line.js}"></script>
+<script type="text/javascript" th:src="@{/webjars/codemirror/addon/hint/show-hint.js}"></script>
+<script type="text/javascript" th:src="@{/webjars/codemirror/mode/clike/clike.js}"></script>
+
 <script type="text/javascript" th:src="@{/js/clock.js}"></script>
 <script type="text/javascript" th:src="@{/js/testfeedback.js}"></script>
 </body>
