--- a/src/main/resources/templates/rankings.html
+++ b/src/main/resources/templates/rankings.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8"/>
 
-    <title>Masters of Java 2018 Ranking</title>
+    <title>Masters of Java - Ranking</title>
 
     <link rel="stylesheet" th:href="@{/webjars/font-awesome/css/solid.min.css}"/>
     <link rel="stylesheet" th:href="@{/webjars/font-awesome/css/fontawesome.min.css}"/>
