--- a/src/main/resources/templates/control.html
+++ b/src/main/resources/templates/control.html
@@ -32,6 +32,10 @@
 
 <div class="container-fluid">
     <div class="row">
+        <div class="col" id="alert">
+        </div>
+    </div>
+    <div class="row">
         <div class="col-3 d-flex flex-column">
             <div class="p-2 align-self-center">
                 <div class="text-center">
