MOJ-117: updated action feedback output tab coloring, to not go from green to red in between compile and test.

--- a/src/main/resources/static/css/index.css
+++ b/src/main/resources/static/css/index.css
@@ -49,6 +49,11 @@ svg {
     color: white;
 }
 
+#tabs .nav-link.partial-success {
+    background-color: #dca118;
+    color: white;
+}
+
 .output-content {
     overflow-y: scroll;
 }
