--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -50,12 +50,12 @@
             <form action="#" th:action="@{/register}" th:object="${form}" method="post">
                 <div class="form-group">
                     <label for="name">Team</label>
-                    <input type="text" class="form-control" id="name" th:field="*{name}" placeholder="">
+                    <input type="text" class="form-control" id="name" th:field="*{name}" placeholder="" maxlength="50">
                     <small id="usernameHelp" class="form-text text-muted">This will show up everywhere.</small>
                 </div>
                 <div class="form-group">
                     <label for="company">Company</label>
-                    <input type="text" class="form-control" id="company" th:field="*{company}" placeholder="">
+                    <input type="text" class="form-control" id="company" th:field="*{company}" placeholder="" maxlength="100">
                     <small id="companyHelp" class="form-text text-muted">Yours or your teammate's or both or ...</small>
                 </div>
                 <div class="form-group">
@@ -68,12 +68,13 @@
                 </div>
                 <div class="form-group">
                     <label for="password">Password</label>
-                    <input type="password" class="form-control" id="password" th:field="*{password}" placeholder="">
+                    <input type="password" class="form-control" id="password" th:field="*{password}" placeholder=""
+                           maxlength="100">
                 </div>
                 <div class="form-group">
                     <label for="passwordCheck">Confirm Password</label>
                     <input type="password" class="form-control" id="passwordCheck" th:field="*{passwordCheck}"
-                           placeholder="">
+                           placeholder="" maxlength="100">
                 </div>
                 <div class="d-flex flex-row-reverse">
                     <button type="submit" id="login" class="btn btn-primary ml-2">Register</button>
