Removed pattern on teamname and character limit on password.

--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -68,13 +68,12 @@
                 </div>
                 <div class="form-group">
                     <label for="password">Password</label>
-                    <input type="password" class="form-control" id="password" th:field="*{password}" placeholder=""
-                           maxlength="100">
+                    <input type="password" class="form-control" id="password" th:field="*{password}" placeholder="">
                 </div>
                 <div class="form-group">
                     <label for="passwordCheck">Confirm Password</label>
                     <input type="password" class="form-control" id="passwordCheck" th:field="*{passwordCheck}"
-                           placeholder="" maxlength="100">
+                           placeholder="">
                 </div>
                 <div class="d-flex flex-row-reverse">
                     <button type="submit" id="login" class="btn btn-primary ml-2">Register</button>
