--- a/src/main/resources/templates/control.html
+++ b/src/main/resources/templates/control.html
@@ -19,7 +19,19 @@
     <meta name="theme-color" content="#ffffff"/>
 
 
-    <title>Control</title>
+    <title>Game Master GUI</title>
+    <style>
+        div.flex-column, .row.p-2 {
+            border: 2px solid black;
+        }
+        h6 {
+            font-style: italic;
+        }
+        .form-check.input-group.radio:hover {
+            background-color: lightgray;
+            cursor: pointer;
+        }
+    </style>
 </head>
 <body class="p-2">
 
@@ -34,132 +46,166 @@
     <div class="row">
         <div class="col" id="alert">
         </div>
-    </div>
-    <div class="row">
-        <div class="col-3 d-flex flex-column">
-            <div class="p-2 align-self-center">
-                <div class="text-center">
-                    <h3>Time Left</h3>
-                </div>
-                <div id="assignment-clock"
-                     th:attrappend="data-time-left=${timeLeft},data-time=${time},running=${running}"
-                     class="align-self-center">
-                    <div class="time d-flex justify-content-center" style="height: 160px; width: 160px;">
-                        <h2 class="align-self-center">--:--</h2>
+
+        <div class="col-8">
+        <ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
+             <li class="nav-item">
+                <a class="nav-link active" id="pills-competitie-tab" data-toggle="pill" href="#pills-competitie" role="tab" aria-controls="pills-competitie" aria-selected="true">Competitie</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" id="pills-sessiebeheer-tab" data-toggle="pill" href="#pills-sessiebeheer" role="tab" aria-controls="pills-sessiebeheer" aria-selected="false">Sessiebeheer</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" id="pills-gebruikersbeheer-tab" data-toggle="pill" href="#pills-gebruikersbeheer" role="tab" aria-controls="pills-gebruikersbeheer" aria-selected="false">Gebruikersbeheer</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" id="pills-configuratie-tab" data-toggle="pill" href="#pills-configuratie" role="tab" aria-controls="pills-configuratie" aria-selected="false">Configuratie</a>
+            </li>
+
+        </ul><br/>
+        <div class="tab-content" id="pills-tabContent">
+
+            <div class="tab-pane fade show active" id="pills-competitie" role="tabpanel" aria-labelledby="pills-competitie-tab">
+                <h6>het starten, stoppen en herstarten van competitie opdrachten.</h6><br/>
+
+                <div class="row">
+
+                    <div class="form-group col-6" th:title="${currentAssignment}">
+                        <th:block th:each="assignment : ${assignments}">
+                            <div class="form-check input-group radio">
+                                <label class="form-check-label">
+                                    <input class="form-check-input" type="radio" name="assignment" th:checked="${assignment.name==currentAssignment}" th:title="${assignment.name==currentAssignment}"
+                                           th:text="' ' + ${assignment.displayName}" th:value="${assignment.name}"
+                                           th:id="${assignment.name}" th:attr="time=${assignment.duration.toSeconds()}"/>
+                                </label>
+                            </div>
+                        </th:block>
                     </div>
-                    <svg width="160" height="160" xmlns="http://www.w3.org/2000/svg">
-                        <g>
-                            <circle class="clock circle_animation" r="69.85699" cy="81" cx="81" stroke-width="8"
-                                    stroke="#6fdb6f" fill="none"></circle>
-                        </g>
-                    </svg>
+
+                    <div class="form-group col-6">
+                        <div class="row">
+                            <div class="btn-group-vertical col-4">
+                                <div class="p-2 text-center">
+                                    <button id="start" class="btn btn-success" onclick="startTask();">Start Assignment
+                                    </button>
+                                </div>
+                                <div class="p-2 text-center">
+                                    <button id="stop" class="btn btn-danger" onclick="stopTask();">Stop Assignment</button>
+                                </div>
+                                <div class="p-2 text-center">
+                                    <button id="clear" class="btn btn-warning" onclick="clearAssignment();">Clear Assignment
+                                    </button>
+                                </div>
+                            </div>
+
+                        </div>
+
+                    </div>
                 </div>
             </div>
+            <div class="tab-pane fade" id="pills-sessiebeheer" role="tabpanel" aria-labelledby="pills-sessiebeheer-tab">
+                <h6>het beheren van sessies</h6><br/>
+
+                <div class="p-2 col-6">
+                    <form class="form" method="post" th:action="@{/control/select-session}" th:object="${selectSessionForm}">
+                        <div class="form-group">
+                            <label for="sessions">Available Sessions</label>
+                            <select class="form-control" id="sessions" th:field="*{session}">
+                                <option th:each="s : ${sessions}" th:value="${s.uuid}" th:text="${s.id + '-' + s.uuid}">
+                                </option>
+                            </select>
+                        </div>
+                        <button type="submit" name="load" class="btn btn-primary">Load</button>
+                    </form>
+                    <form class="form" method="post" th:action="@{/control/new-session}">
+                        <button type="submit" name="create" class="btn btn-secondary">Create New</button>
+                    </form>
+                </div>
         </div>
+            <div class="tab-pane fade" id="pills-gebruikersbeheer" role="tabpanel" aria-labelledby="pills-gebruikersbeheer-tab">
+                <h6>beheren van gebruikers (alleen wachtwoord wijzigen is geimplementeerd momenteel)</h6><br/>
 
-        <div class="offset-1 col-8 d-flex flex-column mt-5">
-            <div class="row">
-
-                <div class="form-group col-3">
-                    <th:block th:each="assignment : ${assignments}">
-                        <div class="form-check input-group radio">
-                            <label class="form-check-label">
-                                <input class="form-check-input" type="radio" name="assignment"
-                                       th:text="' ' + ${assignment.displayName}" th:value="${assignment.name}"
-                                       th:id="${assignment.name}" th:attr="time=${assignment.duration.toSeconds()}"/>
+                <div class="p-2 col-6">
+                    <form class="mt-5" method="POST" action="/upload" enctype="multipart/form-data">
+                        <div>
+                            <label class="btn btn-outline-secondary" for="file">
+                                <input id="file" type="file" name="file" hidden/>
+                                bladeren...
                             </label>
                         </div>
-                    </th:block>
+                        <input class="btn btn-primary form-control col-3" type="submit" value="upload"/>
+                    </form>
+                    <a class="btn btn-link" href="/getresults">get results</a>
+                    <a class="btn btn-link" href="/getteams">get teams</a>
                 </div>
 
-                <div class="form-group col-9">
-                    <div class="row">
-                        <div class="btn-group-vertical col-4">
-                            <div class="p-2 text-center">
-                                <button id="start" class="btn btn-success" onclick="startTask();">Start Assignment
-                                </button>
-                            </div>
-                            <div class="p-2 text-center">
-                                <button id="stop" class="btn btn-danger" onclick="stopTask();">Stop Assignment</button>
-                            </div>
+                <div class="p-2 col-6">
+                    <form class="mt-5" method="POST" action="/control/resetPassword"
+                          enctype="multipart/form-data" th:object="${newPasswordRequest}">
+                        <select class="p-2" th:field="*{teamUuid}">
+                            <option th:value="0">Please select...</option>
+                            <option th:each="team : ${teams}" th:value="${team.uuid}"
+                                    th:text="${team.name}"></option>
+                        </select>
+                        <div class="form-group p-2">
+                            <label for="password"> New Password</label> <input type="password"
+                                                                               class="form-control" id="password"
+                                                                               th:field="*{newPassword}"
+                                                                               placeholder="">
                         </div>
-                        <div class="p-2 text-center col-4">
-                            <span>Current Assignment: [[${currentAssignment}]]</span>
-                            <button id="clear" class="btn btn-warning ml-2" onclick="clearAssignment();">Clear Current
-                                Assignment
-                            </button>
+                        <div class="form-group p-2">
+                            <label for="passwordCheck">Confirm Password</label> <input
+                                type="password" class="form-control" id="passwordCheck"
+                                th:field="*{newPasswordCheck}" placeholder="">
                         </div>
-                    </div>
+                        <input class="btn btn-primary form-control col-3" type="submit"
+                               value="submit" onclick="return confirm('Are you sure to change password?')"/>
+                    </form>
                 </div>
             </div>
+            <div class="tab-pane fade " id="pills-configuratie" role="tabpanel" aria-labelledby="pills-configuratie-tab">
+                <h6>inladen van opdrachten vanaf een geconfigureerde locatie.</h6><br/>
 
+                <div class="p-2 col-6">
+                    <button id="clone" class="btn btn-primary" onclick="scanAssignments();">Scan Assignments</button>
+                    <p id="response"></p>
+                </div>
+            </div>
+        </div>
         </div>
     </div>
 
+
 </div>
-
-<div class="row p-2">
-    <div class="p-2 col-6">
-        <button id="clone" class="btn btn-primary" onclick="scanAssignments();">Scan Assignments</button>
-        <p id="response"></p>
+<div style="position: absolute; left:120px; top:60px;">
+    <div class="text-center"  th:if="${currentAssignment!='-'}" >
+        <h4>'[[${currentAssignment}]]'</h4>
+        <b>Beschikbare tijd:</b>
     </div>
-    <div class="p-2 col-6">
-        <form class="form" method="post" th:action="@{/control/select-session}" th:object="${selectSessionForm}">
-            <div class="form-group">
-                <label for="sessions">Available Sessions</label>
-                <select class="form-control" id="sessions" th:field="*{session}">
-                    <option th:each="s : ${sessions}" th:value="${s.uuid}" th:text="${s.id + '-' + s.uuid}">
-                    </option>
-                </select>
-            </div>
-            <button type="submit" name="load" class="btn btn-primary">Load</button>
-        </form>
-        <form class="form" method="post" th:action="@{/control/new-session}">
-            <button type="submit" name="create" class="btn btn-secondary">Create New</button>
-        </form>
+    <div class="text-center"  th:if="${currentAssignment=='-'}" >
+        <h6>Selecteer een opdracht en start!</h6>
     </div>
-</div>
-
-
-<div class="row p-2">
-    <div class="p-2 col-6">
-        <form class="mt-5" method="POST" action="/upload" enctype="multipart/form-data">
-            <div>
-                <label class="btn btn-outline-secondary" for="file">
-                    <input id="file" type="file" name="file" hidden/>
-                    bladeren...
-                </label>
-            </div>
-            <input class="btn btn-primary form-control col-3" type="submit" value="upload"/>
-        </form>
-        <a class="btn btn-link" href="/getresults">get results</a>
-        <a class="btn btn-link" href="/getteams">get teams</a>
+    <div id="assignment-clock"
+         th:attrappend="data-time-left=${timeLeft},data-time=${time},running=${running}"
+         class="align-self-center">
+        <div class="time d-flex justify-content-center" style="height: 160px; width: 160px;">
+            <h2 class="align-self-center">--:--</h2>
+        </div>
+        <svg width="160" height="160" xmlns="http://www.w3.org/2000/svg">
+            <g>
+                <circle class="clock circle_animation" r="69.85699" cy="81" cx="81" stroke-width="8"
+                        stroke="#6fdb6f" fill="none"></circle>
+            </g>
+        </svg>
     </div>
-</div>
+    <div>
 
-<div class="row p-2 container">
-    <div class="p-2 col-6">
-        <form class="mt-5" method="POST" action="/control/resetPassword"
-              enctype="multipart/form-data" th:object="${newPasswordRequest}">
-            <select class="p-2" th:field="*{teamUuid}">
-                <option th:value="0">Please select...</option>
-                <option th:each="team : ${teams}" th:value="${team.uuid}"
-                        th:text="${team.name}"></option>
-            </select>
-            <div class="form-group p-2">
-                <label for="password"> New Password</label> <input type="password"
-                                                                   class="form-control" id="password"
-                                                                   th:field="*{newPassword}"
-                                                                   placeholder="">
-            </div>
-            <div class="form-group p-2">
-                <label for="passwordCheck">Confirm Password</label> <input
-                    type="password" class="form-control" id="passwordCheck"
-                    th:field="*{newPasswordCheck}" placeholder="">
-            </div>
-            <input class="btn btn-primary form-control col-3" type="submit"
-                   value="submit" onclick="return confirm('Are you sure to change password?')"/>
-        </form>
+        <div class="p-2 col-6">
+            <a class="btn btn-primary" href="/rankings" target="rankings">Bekijk ranglijst competitie</a><br/><br/>
+            <a class="btn btn-primary" href="/feedback" target="feedback">Bekijk tussenstand opdracht</a><br/><br/>
+            <a class="btn btn-primary" href="/register" target="register">Registreer team</a><br/><br/>
+        </div>
+
     </div>
 </div>
 
