basis Gamemaster GUI

--- a/src/main/resources/templates/control.html
+++ b/src/main/resources/templates/control.html
@@ -102,7 +102,7 @@
                                     <button id="start" class="btn btn-success" onclick="startTask();">Start Assignment</button>
                                 </div>
                                 <div class="p-2 text-center">
-                                    <button id="stop" class="btn btn-danger" onclick="stopTask();" data-container="body" data-toggle="popover" data-placement="left" data-content="Werkt nog niet goed (maakt opgedrachtstatus stuk), dus open voor discussie.">Stop Assignment</button>
+                                    <button id="stop" class="btn btn-danger" onclick="stopTask();" data-container="body" data-toggle="popover" data-placement="left" data-content="Herstarten werkt nog niet goed, dus open voor discussie.">Stop Assignment</button>
                                 </div>
                                 <div class="p-2 text-center">
                                     <button id="clear" class="btn btn-warning" onclick="clearAssignments();" data-container="body" data-toggle="popover" data-placement="right" data-content="Dit was nog niet geimplenteerd, dus open voor discussie.">Reset competition</button>
@@ -191,22 +191,22 @@
         </div>
         </div>
     </div>
-    <div class="row" ><br/><br/><br/>
+    <div class="row" ><br/>
     </div>
     <div class="row" >
         <div class="col-4"  ></div>
         <div class="col-8"  >
 
             <ul class="nav nav-pills" id="pills-tab2" role="tablist">
-                <li class="nav-item">
-                    <a class="nav-link active" id="pills-wedstrijdverloop-tab" data-toggle="pill" href="#pills-wedstrijdverloop" role="tab" aria-controls="pills-wedstrijdverloop" aria-selected="true">Wedstrijdverloop</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" id="pills-opdrachtdetails-tab" data-toggle="pill" href="#pills-opdrachtdetails" role="tab" aria-controls="pills-opdrachtdetails" aria-selected="false">Opdrachtdetails</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" id="pills-toptien-tab" data-toggle="pill" href="#pills-toptien" role="tab" aria-controls="pills-toptien" aria-selected="false">Top 10</a>
-                </li>
+            <li class="nav-item">
+                <a class="nav-link active" id="pills-wedstrijdverloop-tab" data-toggle="pill" href="#pills-wedstrijdverloop" role="tab" aria-controls="pills-wedstrijdverloop" aria-selected="true">Wedstrijdverloop</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" id="pills-opdrachtdetails-tab" data-toggle="pill" href="#pills-opdrachtdetails" role="tab" aria-controls="pills-opdrachtdetails" aria-selected="false">Opdrachtdetails</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" id="pills-toptien-tab" data-toggle="pill" href="#pills-toptien" role="tab" aria-controls="pills-toptien" aria-selected="false">Top 10</a>
+            </li>
             </ul>
             <div class="tab-content roundGrayBorder" id="pills-tabContent2">
                 <div class="tab-pane fade show active" id="pills-wedstrijdverloop" role="tabpanel" aria-labelledby="pills-wedstrijdverloop-tab">
