[MOJ-141] Completion bonuspoints for each specific test

--- a/src/main/resources/templates/control.html
+++ b/src/main/resources/templates/control.html
@@ -237,6 +237,8 @@
                     <h6>Bekijk hier alle opdrachten tot in elk detail</h6>
 
                     <div th:remove="tag" th:utext="${assignmentDetailCanvas}"></div>
+
+                    <br/><i>(*1) = puntenverdeling per individuele test (zie labels bij opdracht voor details over puntenverdeling).</i>
                 </div>
                 <div class="tab-pane fade" id="pills-toptien" role="tabpanel" aria-labelledby="pills-toptien-tab">
                     <h6>Bekijk hier de beste teams tot dusver</h6>
