--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -39,7 +39,7 @@
 
             <div id="content" th:if="${running}" th:attr="finished=${finished},submittime=${submittime}">
                 <div class="p-2">
-                    <h3>Assignment: [[${assignment}]]</h3>
+                    <h3>Assignment: [[${assignment}]] <span th:if="${(solution)}"> - (With Solution)</span> </h3>
                 </div>
                 <div id="alert-container">
                     <div th:if="${finished and (finalscore &gt; 0)}" class="alert alert-success p-4" role="alert">
@@ -74,7 +74,7 @@
                                       class="fas fa-vial"></span>
                                 <span th:if="${file.fileType == T(nl.moj.server.runtime.model.AssignmentFileType).TEST_RESOURCE}"
                                       class="fas fa-vial"></span>
-                                <span th:text="${file.shortName}"></span>
+                                <span th:id="${'tabLink_'+file.shortName}"  class='unitTestTab' th:title="${file.shortName}" th:text="${file.shortName}"></span>
                             </a>
                         </li>
                         <li class="nav-item">
@@ -143,16 +143,16 @@
                    target="_blank">Javadoc</a>
             </div>
             <div th:if="${running}" class="p-2 text-center">
-                <button id="compile" class="btn w-50 btn-success" th:disabled="${finished}">Compile</button>
+                <button id="compile" class="btn w-50 btn-success" th:disabled="${finished||timeLeft==0}">Compile</button>
             </div>
             <div th:if="${running}" class="p-2  text-center">
                 <button id="show-tests" class="btn w-50 btn-success" data-toggle="modal" data-target="#test-modal"
-                        onclick="resetTabColor();" th:disabled="${finished}">Test
+                        onclick="resetTabColor();" th:disabled="${finished||timeLeft==0}">Test
                 </button>
             </div>
             <div th:if="${running}" class="mt-5 p-2 text-center">
                 <button id="btn-open-submit" class="btn w-50 btn-danger" data-toggle="modal"
-                        data-target="#confirm-submit-modal" th:disabled="${finished}">SUBMIT
+                        data-target="#confirm-submit-modal" th:disabled="${finished||timeLeft==0}">SUBMIT
                 </button>
             </div>
 
@@ -163,6 +163,11 @@
         <div class="mr-auto p-2">
             <img th:src="@{/images/logo_first8_150x39.png}" class="img-fluid"
                  src="/static/images/logo_first8_150x39.png"/>
+
+
+        </div>
+        <div class="mr-auto p-2">&nbsp;
+            <i>[[${bonus}]]<span th:if="${labels.size()>0}">. Points for each individual test: [[${labels.toString().replace("_","=")}]]</span></i>
         </div>
         <div class="ml-auto pr-2 align-self-center" id="status"></div>
         <div class="pr-2 align-self-center">
@@ -195,7 +200,7 @@
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
-                <button type="button" id="test" class="btn btn-primary" th:disabled="${finished}">Run Tests</button>
+                <button type="button" id="test" class="btn btn-primary" th:disabled="${finished||timeLeft==0}">Run Tests</button>
             </div>
         </div>
     </div>
@@ -219,7 +224,7 @@
             </div>
             <div class="modal-footer">
                 <button type="cancel-submit" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
-                <button id="submit" class="btn w-50 btn-danger" th:disabled="${finished}">SUBMIT</button>
+                <button id="submit" class="btn w-50 btn-danger" th:disabled="${finished||timeLeft==0}">SUBMIT</button>
             </div>
         </div>
     </div>
